[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Enemies/SecBot/SecBot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="SecBot" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.72205e-06, -0.112966 )
scale = Vector2( 3.19157, 3.22546 )
[connection signal="area_entered" from="." to="." method="_on_SecBot_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_SecBot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SecBot_mouse_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
